--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body {
     background: linear-gradient(rgba(5, 7, 12 ,0.75), rgba(5, 7, 12, 0.75)),
@@ -8,83 +9,92 @@ body {
     background-size: 100%;
     background-attachment: fixed;
     font-family: "Koulen";
-}
-header {
-    margin-bottom: 40px;
+    color: grey;
 }
 nav {
     background-color:rgba(5, 7, 12, 0.5);
-    text-align: center;
+    width: 100%;
+    padding: 1em;
+    display: flex;
+    justify-content: center;
+    position: fixed;
 }
 nav ul li {
     color: grey;
+    font-size: 1.3em;
     display: inline-block;
-    padding: 20px;
-    font-size: 20px;
+    padding: 0 1em;
+    text-decoration: overline;
+}
+nav ul li:hover {
+    text-shadow: 0 0 0.5em;
 }
 h1 {
     color: grey;
     text-align: center;
-    font-size: 60px;
-    text-decoration: overline;
+    font-size: 3.5em;
 }
-p {
-    width: 600px;
-    font-size: 18px;
-    padding: 0px 10px;
-    position: relative;
-    left: 700px;
-    border: 1px solid grey;
-    border-radius: 15px;
-    color: grey;
-}
-div {
-    position: relative;
-    bottom: 50px;
-}
-aside {
-    position: relative;
-    left: 1140px;
-    bottom: 900px;
-    font-size: 18px;
-    display: inline-block;
-}
-aside h2 {
-    font-size: 25px;
-    color: grey;
-    text-decoration: underline;
-}
-aside ul li {
-    list-style-type: none;
-    color: grey;
-}
-img {  
-    position: relative;
-    bottom: 670px;
-    margin: 50px 90px;
+img {
     transition: box-shadow 0.3s ease;
 }
 img:hover {
-    box-shadow: 0 0 0.5rem rgba(196, 186, 186, 0.3);
+    box-shadow: 0 0 0.5em rgba(196, 186, 186);
 }
-.art-2 {
-    position: relative;
-    bottom: 600px;
-    margin: 5px;
-    width: 1070px;
-    height: 300px;
+p {
+    width: 600px;
+    color: grey;
+    font-size: 1.1em;
+    border: 0.1em solid grey;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    transition: box-shadow 0.3s ease;
+}
+p:hover {
+    box-shadow: 0 0 0.5em rgba(196, 186, 186);
+}
+div {
+    display: flex;
+    justify-content: space-between;
+    padding: 5em 3em;
+}
+.link-pag a {
+    text-decoration: none;
     color: grey;
 }
-section article h2 {
-    font-size: 35px;
-    padding: 5px;
+.section-1 {
+   display: flex;
+   justify-content: space-around;
+}
+.section-2 {
+    padding-top: 2em 5em;
+}
+.section-2 h2 {
     background-color: black;
-    width: 80%;
+    font-size: 2em;
+    line-height: 1.5em;
 }
-.art-2 ul li {
-    font-size: 25px;
-    padding: 10px;
+.link-movie {
+    list-style-type: none;
+    font-size: 1.3em;
 }
-a {
-    text-decoration: none;
+.link-movie a {
+    text-decoration:none;
+    color: grey;
 }
+.section-2_ul {
+    padding-top: 1.1em;
+}
+.aside {
+    border: 0.1em solid grey;
+    border-radius: 0.5em;
+    padding: 1em 0.5em;
+}
+.aside-h2 {
+    text-decoration: overline;
+    font-size: 1.6em;
+}
+.aside-h2_li {
+    font-size: 1.1em;
+    list-style-type: none;
+}
+
